--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -6,10 +6,10 @@
 
 url = https://bulley-boss-react-uat.pages.dev/
 
-emailId = bulleysboss@gmail.com
-password = Attri@123
+emailId = 
+password = 
 
-#emailId = build@attri.ai
-#password = attri@2024
+#emailId = 
+#password = 
 
 browser = chrome
