--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -6,10 +6,10 @@
 
 url = https://bulley-boss-react-uat.pages.dev/
 
-emailId = 
-password = 
+emailId = bulleysboss@gmail.com
+password = Censius@123
 
-#emailId = 
-#password = 
+#emailId = build@attri.ai
+#password = attri@2024
 
 browser = chrome
