Created Test cases for Place Order, Dashboard and Order for yard pages.

--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -13,3 +13,11 @@ password = Censius@123
 #password = attri@2024
 
 browser = chrome
+
+productQuantityToOrder = 1
+yardProduct = Dovetail 103 stainless steel dovetail brick tie 5"
+# starts from 2
+truckNumber = 2
+truckDeliveryTime = 12:00 AM
+pickUp = PARTIAL JOB PICKUP
+orderForYardQuantity = 1
