--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -12,13 +12,14 @@ jobs:
 
     steps:
       - name: ⬇️ Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: ☕ Set up Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v3.13.0
         with:
           distribution: 'temurin'
-          java-version: '17' # Or '11' depending on your Java version
+          java-version: '17'
+          cache: 'maven'
 
       - name: 🧰 Install Maven
         run: sudo apt install maven -y
@@ -27,8 +28,8 @@ jobs:
         run: mvn clean test
 
       - name: 📤 Upload Extent Report
-        if: always() # Even if tests fail
-        uses: actions/upload-artifact@v3
+        if: always()
+        uses: actions/upload-artifact@v3.1.3
         with:
           name: extent-report
-          path: test-output/ExtentReports/ # Or your actual report path
+          path: test-output/ExtentReports/
