--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       - name: ⬇️ Checkout code
-        uses: actions/checkout@v3.5.3
+        uses: actions/checkout@v3.6.0  # Latest version of checkout
 
       - name: ☕ Set up Java
-        uses: actions/setup-java@v3.13.0
+        uses: actions/setup-java@v3.14.0  # Latest version of setup-java
         with:
           distribution: 'temurin'
           java-version: '17'
@@ -28,9 +28,8 @@ jobs:
         run: mvn clean test
 
       - name: 📤 Upload Extent Report
-        if: always()
+        if: always()  # Ensure this step runs regardless of test result
         uses: actions/upload-artifact@v4
         with:
           name: extent-report
-          path: test-output/ExtentReports/
-     
+          path: test-output/ExtentReports/  # Ensure this path is correct
