--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -6,32 +6,47 @@ on:
   pull_request:
     branches: [ main ]
   schedule:
-      - cron: '0 2 * * *'
+    - cron: '0 2 * * *' # Runs at 2 AM UTC daily
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false # Important: Allows other jobs to finish even if one fails
+      matrix:
+        # Define the TestNG <test> names from your testng.xml to run in parallel
+        test_name: ['smoke module', 'regression module'] # Match the 'name' attribute in <test> tags
 
     steps:
       - name: ⬇️ Checkout code
-        uses: actions/checkout@v3.6.0  # Latest version of checkout
+        uses: actions/checkout@v3.6.0 # Using a specific checked version
 
-      - name: ☕ Set up Java
-        uses: actions/setup-java@v3 # Latest version of setup-java
+      - name: ☕ Set up Java and Maven
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '23'
-          cache: 'maven'
+          java-version: '23' # Using Java 23 as specified. Consider LTS (17, 21) if compatibility issues arise.
+          cache: 'maven' # This caches Maven dependencies
 
-      - name: 🧰 Install Maven
-        run: sudo apt install maven -y
+      # The 'setup-java' action with 'cache: maven' often handles Maven setup implicitly.
+      # The explicit 'apt install maven' might be redundant and potentially conflict. Removed it.
+      # - name: 🧰 Install Maven
+      #   run: sudo apt install maven -y
 
-      - name: 📦 Build & Run Tests
-        run: mvn clean test
+      - name: 📦 Build & Run Tests (${{ matrix.test_name }}) # Added matrix variable to name for clarity
+        run: |
+          echo "Running TestNG <test> block: ${{ matrix.test_name }}"
+          # Use Maven Surefire/Failsafe plugin to target specific TestNG test names
+          # Ensure your pom.xml uses maven-surefire-plugin (or failsafe) and configures it for TestNG
+          # The '-Dtestng.testnames' property tells TestNG which <test> block(s) to run
+          mvn clean test -Dsurefire.suiteXmlFiles=testng.xml -Dtestng.testnames="${{ matrix.test_name }}"
 
-      - name: 📤 Upload Extent Report
-        if: always()  # Ensure this step runs regardless of test result
+      - name: 📤 Upload Extent Report (${{ matrix.test_name }})
+        if: always() # Run even if the test step fails to upload partial reports
         uses: actions/upload-artifact@v4
         with:
-          name: extent-report
-          path: test-output/ExtentReports/  # Ensure this path is correct
+          # Give each artifact a unique name based on the test block run
+          name: extent-report-${{ matrix.test_name }}
+          # Define the path to the report generated in this specific job
+          path: test-output/ExtentReports/ExtentReport.html # Uploading the specific HTML file
+          # Optional: retention-days: 7 # Keep artifacts for 7 days
