--- a/src/test/resources/Config.properties
+++ b/src/test/resources/Config.properties
@@ -5,4 +5,5 @@ password="Kelageri@125"
 quote_create_json=src/test/resources/payloads/Quote_create.json
 create_location_json=src/test/resources/payloads/Create_Location.json
 loginJson=src/test/resources/payloads/loginCred.json
+Location15verify=src/test/resources/payloads/Location15verify.json
 
